# cannabis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-frontend-wrapper.sh  README.md  docker-compose.dev.yml  docker-compose.yml  setup-dev-docker.sh
backend/: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .grype.yaml  .pre-commit-bandit-wrapper.sh  .pre-commit-config.yaml  .pre-commit-confirm-wrapper.sh  Dockerfile  Dockerfile.dev  check_user.py  conftest.py  entrypoint.sh  pyproject.toml  pytest.ini  setup-dev.sh
backend/auth/: apps.py  middleware.py  serializers.py  urls.py  utils.py  views.py
backend/cases/: admin.py  apps.py  models.py  urls.py
backend/cases/migrations/: 0001_initial.py  0004_certificate_file_hash_at_signing_and_more.py  0005_add_botanist_signoff_and_invoicing_phases.py  0006_certificate_is_locked_certificate_locked_at_and_more.py  0007_enable_pg_trgm_extension.py  0008_submissiondraft.py  0009_remove_submission_is_draft.py  0010_rename_submission_to_case.py  0011_alter_case_options_alter_casedraft_options_and_more.py  0012_update_phase_choices.py  0013_alter_casephasehistory_from_phase_and_more.py  0014_update_phase_to_case_creation.py  0015_migrate_data_entry_to_new_phases.py  0016_case_additional_notes.py  0017_remove_certificate_pdf_file_and_more.py  0018_alter_additionalinvoicefee_units_to_decimal.py  0019_case_last_actioned_by_certificate_bags_and_more.py  0020_batching_data_migration.py  0021_remove_additionalinvoicefee_created_by_and_more.py  0022_alter_case_phase_alter_casephasehistory_from_phase_and_more.py  0023_remap_case_creation_phase.py  0024_certificate_additional_notes.py  0025_alter_batch_certificate_number_range_and_more.py  0026_remove_casephasehistory_reason_and_more.py  0027_case_police_form.py  0028_case_is_legacy.py  0029_multi_form_reshape.py  0030_alter_case_approved_botanist_and_more.py  0031_priority3form_marked_ready_and_more.py  0032_priority3form_additional_notes.py  0033_remove_case_additional_notes.py
backend/cases/ocr/: __init__.py  client.py  content_type_map.py  matcher.py  parser.py
backend/cases/permissions/: __init__.py  role_permissions.py
backend/cases/serializers/: __init__.py  bags.py  base.py  batches.py  certificates.py  (+6 more)
backend/common/: admin.py  middleware.py  models.py  urls.py  views.py
backend/communications/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/config/: cache_settings.py  dbca-middleware.py  dbca_middleware.py  exception_handler.py  helpers.py  pagination.py  settings.py  urls.py
backend/defendants/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/emails/: email_utils.py  mandrill_helper.py  views.py
backend/medias/: admin.py  models.py  serializers.py  urls.py  views.py
backend/organisations/: admin.py  models.py  serializers.py  urls.py  views.py
backend/police/: admin.py  models.py  serializers.py  urls.py  views.py
backend/signatures/: admin.py  models.py  urls.py  validators.py
backend/submissions/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/users/: admin.py  error_handlers.py  logging_config.py  models.py  serializers.py  services.py  tests.py  throttles.py  urls.py  views.py
(+1084 files in other folders)
