[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["idabblewith <jprincedev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "<3.15,>=3.13"
djangorestframework = "^3.16.0"
sentry-sdk = { extras = ["django"], version = "^2.25.1" }
django-environ = ">=0.13.0,<1.0.0"
requests = "^2.32.3"
django-cors-headers = "^4.7.0"
psycopg = "^3.2.6"
pyjwt = "^2.10.1"
django-storages = { extras = ["azure"], version = "^1.14.6" }
gunicorn = ">=26.0.0,<27.0.0"
psycopg-binary = "^3.2.9"
dj-database-url = "^3.0.0"
dbca-utils = "^2.1.3"
black = "^26.3.1"
djangorestframework-simplejwt = "^5.5.1"
matplotlib = "^3.10.6"
pillow = "^12.1.1"
whitenoise = {extras = ["brotli"], version = "^6.11.0"}
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"
redis = ">=8.0.0,<9.0.0"
django-redis = ">=7.0.0,<8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "hypothesis (>=6.152.2,<7.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-django (>=4.8.0,<5.0.0)",
    "pytest-xdist (>=3.5.0,<4.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-split (>=0.11.0,<1.0.0)",
    "factory-boy (>=3.3.0,<4.0.0)",
    "autoflake (>=2.3.3,<3.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "bandit (>=1.9.4,<2.0.0)",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.bandit]
exclude_dirs = ["tests", "migrations", "venv"]
skips = ["B101", "B601", "B404", "B607", "B603", "B105", "B608"]
